<resources>
    <string name="app_name_string">Template</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="map">Bản đồ</string>
    <string name="covid_news">Tin tức Covid</string>
    <string name="chat">Liên hệ</string>
    <string name="info">Sản phẩm</string>
    <string name="sheathcare">sHealthCare</string>
    <string name="number_of_infections_in_the_world">Số ca nhiễm theo quốc gia (222 quốc gia)</string>
    <string name="infections_in_the_world">Nhiễm bệnh</string>
    <string name="recover_in_the_world">Bình phục</string>
    <string name="deaths_country">Tử vong</string>
    <string name="tab_one">Trong nước</string>
    <string name="tab_two">Quốc tế</string>
    <string name="name_country">Quốc tế</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths_in_the_world">Deaths</string>
    <string name="number_of_infections">Số ca nhiễm ở Việt Nam\n Tổng %s ca nhiễm trên 44 tỉnh thành</string>
    <string name="infections">Nhiễm bệnh (%s)</string>
    <string name="recover">Bình phục (%s)</string>
    <string name="deaths">Tử vong (%s)</string>
    <string name="detailDrugStore">Detail of DrugStore</string>
    <string name="detailClinic">Detail of Clinic</string>
    <string name="personalDetails">Personal Details</string>
    <string name="drugstore">Drug Store</string>
    <string name="clinic">Clinics</string>
    <string name="search_for_drug_information">Search For Drug Information</string>
    <string name="address_search">Address Search</string>
    <string name="please_wait_this_may_take_a_moment">Please wait! This may take a moment.</string>
    <string name="searchDrugStore">Search DrugStore</string>

    <string name="urine">Urine Test</string>
    <string name="review">Đánh giá: </string>
    <string name="location">Địa chỉ: </string>
    <string name="address"> 20 Hoàng Quốc Việt</string>
    <string name="phone">Điện thoại:</string>
    <string name="numberPhone"> 048-430-0271</string>
    <string name="time">Giờ hoạt động:</string>
    <string name="start">Mở cửa từ 9h sáng đến 7h tối</string>
    <string name="service">Dịch vụ</string>
    <string name="product">Sản phẩm được sử dụng</string>
    <string name="comment">Bình luận</string>
    <string name="date">2018/06/02</string>
    <string name="userComment">Người dùng bình luận</string>
    <string name="user">User</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="nameClinic">Clinic 1</string>
    <string name="web">Website:</string>
    <string name="language">English</string>
    <string name="link">https://www.omipharma.vn/about-omicare/</string>

    <string name="see">➜ Xem thêm</string>
    <string name="timeWorking">Giờ làm việc</string>
    <string name="week">Tất cả các ngày trong tuần</string>
    <string name="timeMorning">09:00~12:00</string>
    <string name="timeEvening">17:30~19:30</string>
    <string name="note">Ghi chú</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="tick">✓</string>

    <string name="omicare">Omicare</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="medicine">Name of Medicine</string>
    <string name="subtitle">SubTitle</string>
    <string name="price">Price: </string>
    <string name="tax">140$ (154$ VAT)</string>
    <string name="number">123</string>
    <string name="similarProduct">Similar Products</string>
    <string name="check">✓</string>

    <string name="Email">Email</string>

    <string name="Password">Password</string>
    <string name="urNotMemnber">You Are Not Member</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="Signup">Sign up</string>
    <string name="title_activity_scan_bar_code">ScanBarCodeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="searchDrugs">Search Drugs</string>


    <string name="scan_inside_frame">Please scan barcode inside the frame</string>


    <string name="sreach_drug">Search for Drug Information</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="search_by_keyword">Search by keyword</string>
    <string name="search">Search</string>
    <string name="results_found">Results Found</string>

    <string name="title_activity_maps">Map</string>
    <string name="detailOfClinic">Chi tiết phòng khám</string>
    <string name="detailOfDrugstore">Detail of DrugStore</string>
    <string name="user_name">User Name</string>
    <string name="infomation">Infomation</string>
    <string name="logout">Logout</string>

    <string name="setting">Setting</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_pass">Change Pass</string>
    <string name="input_old_your_password">Input Old Your Password</string>
    <string name="input_new_your_password">Input New Your Password</string>
    <string name="comfirm_new_your_password">Comfirm New Your Password</string>
    <string name="confirm">Confirm</string>
    <string name="input_your_mail">Input Your Mail</string>
    <string name="save">Save</string>
    <string name="don_t_save">Don\'t Save</string>
    <string name="notification_change_pass_success">Your request has been processed. You will get e-mail guide to change the password.</string>
    <string name="nameDrugStore">DrugStore 1</string>

    <string name="evaluate">Đánh giá</string>
    <string name="pick_image_from_gallery">Mở Thư Viện Ảnh</string>
    <string name="open_camera">Chụp Ảnh</string>
    <string name="set_avatar_profile">Chọn Ảnh</string>
    <string name="txt_login">Đăng nhập</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="need_help">Bạn cần hỗ trợ?</string>
    <!-- Home info last start-->
    <string name="home_title_tab">Bản tin sức khỏe</string>
    <string name="health_new_tab">Tin tức</string>
    <!-- Home info last End-->

    <!-- Doctor Chat -->
    <string name="doctor_eyes">Bác sỹ khoa mắt</string>
    <string name="doctor_hear">Bác sỹ khoa tai mũi họng</string>
    <string name="doctor_foreign">Bác sỹ khoa ngoại</string>
    <string name="doctor_local">Bác sỹ khoa nội</string>
    <string name="doctor_brain">Bác sỹ khoa tâm lý</string>
    <string name="doctor_children">Bác sỹ khoa nhi</string>


</resources>
